--- a/app/src/main/res/layout/user_navigation_drawer_header.xml
+++ b/app/src/main/res/layout/user_navigation_drawer_header.xml
@@ -9,16 +9,30 @@
         android:background="@color/green_light"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Placeholder"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textAppearance="?attr/textAppearanceHeadline6"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="60dp"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="0dp"
+            android:layout_margin="5dp"
+            >
+        <ImageView
+            android:id="@+id/User_Image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/img_avatar2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
+            android:contentDescription="User Avatar" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,8 +43,8 @@
             android:paddingBottom="10dp"
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/Title"
-            app:layout_constraintTop_toBottomOf="@+id/Title" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
