--- a/app/src/main/res/layout/fragment_medical_info_main.xml
+++ b/app/src/main/res/layout/fragment_medical_info_main.xml
@@ -70,6 +70,50 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
                     app:layout_constraintTop_toBottomOf="@+id/userName" />
+                <TableLayout
+                    android:id="@+id/allergies"
+                    app:layout_constraintTop_toBottomOf="@id/imageView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:isScrollContainer="true"
+                    android:shrinkColumns="*"
+                    android:stretchColumns="*"
+                    android:layout_margin="10dp"
+                    android:scrollbars="vertical">
+                    <TableRow
+                        android:background="@color/green_light"
+                        android:padding="5dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="@color/white"
+                            android:layout_column="0"
+                            android:text="Alergia"
+                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+                        <TextView
+                            android:textColor="@color/white"
+                            android:text="Typ"
+                            android:layout_column="1"
+                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+                    </TableRow>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/allergy_view"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:listitem="@layout/list_item_allergies">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+            </TableLayout>
+                <TableLayout
+                    android:id="@+id/diseases"
+                    app:layout_constraintTop_toBottomOf="@id/allergies"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="250dp"
+                    android:isScrollContainer="true"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
