--- a/app/src/main/res/layout/fragment_medical_info_main.xml
+++ b/app/src/main/res/layout/fragment_medical_info_main.xml
@@ -62,6 +62,7 @@
 
                 <Button
                     android:id="@+id/bandButton"
+                    android:background="?attr/colorSecondary"
                     android:layout_marginVertical="10dp"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
@@ -83,7 +84,7 @@
                     android:layout_margin="10dp"
                     android:scrollbars="vertical">
                     <TableRow
-                        android:background="@color/green_light"
+                        android:background="?attr/colorPrimaryVariant"
                         android:padding="5dp"
                         android:layout_height="wrap_content">
                         <TextView
@@ -93,6 +94,7 @@
                             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                         <TextView
                             android:textColor="@color/white"
+                            android:id="@+id/allergy_type_header"
                             android:text="Typ"
                             android:layout_column="1"
                             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
@@ -111,9 +113,45 @@
                     app:layout_constraintTop_toBottomOf="@id/allergies"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="250dp"
-                    android:isScrollContainer="true"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:isScrollContainer="true"
+                    android:shrinkColumns="*"
+                    android:stretchColumns="*"
+                    android:layout_marginVertical="30dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:scrollbars="vertical">
+                    <TableRow
+                        android:background="?attr/colorPrimaryVariant"
+                        android:padding="5dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textColor="@color/white"
+                            android:text="Choroba"
+                            android:layout_column="0"
+                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+                    </TableRow>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/disease_view"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:listitem="@layout/list_item_diseases"/>
+                </TableLayout>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:padding="10dp"
+                    style="@style/Widget.Material3.Button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/diseases"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="Add"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
