--- a/app/src/main/res/layout/list_item_diseases.xml
+++ b/app/src/main/res/layout/list_item_diseases.xml
@@ -5,16 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:shrinkColumns="*"
     android:stretchColumns="*">
-<TableRow
-    android:id="@+id/alergy_row"
-    android:layout_margin="10dp">
+    <TableRow
+        android:id="@+id/alergy_row"
+        android:layout_margin="10dp">
         <TextView
             android:layout_column="0"
-            android:id="@+id/alergy_text"
-            android:textSize="18dp"/>
-        <TextView
-            android:layout_column="1"
-            android:id="@+id/alergy_type"
+            android:id="@+id/disease_name"
             android:textSize="18dp"/>
     </TableRow>
 </TableLayout>
