--- a/app/src/main/res/layout/fragment_medical_info_main.xml
+++ b/app/src/main/res/layout/fragment_medical_info_main.xml
@@ -88,11 +88,15 @@
                         android:padding="5dp"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:layout_width="0dip"
+                            android:layout_weight="1"
                             android:textColor="@color/white"
                             android:layout_column="0"
                             android:text="Alergia"
                             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                         <TextView
+                            android:layout_width="0dip"
+                            android:layout_weight="1"
                             android:textColor="@color/white"
                             android:id="@+id/allergy_type_header"
                             android:text="Typ"
