--- a/app/src/main/res/layout/fragment_blood_type_form.xml
+++ b/app/src/main/res/layout/fragment_blood_type_form.xml
@@ -38,29 +38,34 @@
             app:layout_constraintTop_toBottomOf="@id/bloodText">
 
             <RadioButton
+                android:id="@+id/blood_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:text="0" />
 
             <RadioButton
+                android:id="@+id/blood_A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:text="A" />
 
             <RadioButton
+                android:id="@+id/blood_B"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="B" />
 
             <RadioButton
+                android:id="@+id/blood_AB"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:text="AB" />
         </RadioGroup>
 
         <RadioGroup
+            android:id="@+id/rh_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
@@ -71,12 +76,14 @@
             app:layout_constraintTop_toBottomOf="@id/bloodText">
 
             <RadioButton
+                android:id="@+id/rh_minus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:text="Rh-" />
 
             <RadioButton
+                android:id="@+id/rh_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
